# LARGE-LANGUAGE-MODELS-LLMS

./: Agents.ipynb  ConversationBufferMemory.ipynb  GENAI_Practice.ipynb  LANGGRAPH_Recruitment_Agency.ipynb  main.py  pyproject.toml  requirements.txt
0-DataIngestParsing/: 1-dataingestion.ipynb
0-DataIngestParsing/data/text_files/: python_intro.txt
